# tracing-logfmt

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
src/: formatter.rs  lib.rs
src/formatter/: builder.rs
src/otel/: dynamic_trace.rs  mod.rs
