[package]
name = "tracing-logfmt"
version = "0.3.7"
edition = "2021"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
description = "A logfmt formatter for tracing events and spans"
homepage = "https://github.com/EmbarkStudios/tracing-logfmt"
repository = "https://github.com/EmbarkStudios/tracing-logfmt"
keywords = ["logging", "tracing"]
readme = "README.md"

[dependencies]
nu-ansi-term = { version = "0.50", optional = true }
time = { version = "0.3.7", features = ["formatting"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

# Optional: extract trace_id/span_id from tracing-opentelemetry span extensions.
# Enable the feature that matches your tracing-opentelemetry version (only one needed).
# Pattern from json-subscriber: https://github.com/mladedav/json-subscriber/blob/7491bd305c8ec3cc31a16d65f047ca82b3a66894/Cargo.toml
tracing-opentelemetry-0-28 = { package = "tracing-opentelemetry", version = "0.28", optional = true }
tracing-opentelemetry-0-29 = { package = "tracing-opentelemetry", version = "0.29", optional = true }
tracing-opentelemetry-0-30 = { package = "tracing-opentelemetry", version = "0.30", optional = true }
tracing-opentelemetry-0-31 = { package = "tracing-opentelemetry", version = "0.31", optional = true }
tracing-opentelemetry-0-32 = { package = "tracing-opentelemetry", version = "0.32", optional = true }
# Renamed so we can use the same opentelemetry version as each tracing-opentelemetry (parent_cx.span().span_context()).
opentelemetry-0-27 = { package = "opentelemetry", version = "0.27", optional = true, default-features = false, features = ["trace"] }
opentelemetry-0-28 = { package = "opentelemetry", version = "0.28", optional = true, default-features = false, features = ["trace"] }
opentelemetry-0-29 = { package = "opentelemetry", version = "0.29", optional = true, default-features = false, features = ["trace"] }
opentelemetry-0-30 = { package = "opentelemetry", version = "0.30", optional = true, default-features = false, features = ["trace"] }

[features]
ansi_logs = ["dep:nu-ansi-term"]

# OpenTelemetry trace_id and span_id in log output via span extensions (OtelData).
# Enable the feature that matches your tracing-opentelemetry version.
# See: https://github.com/mladedav/json-subscriber (with_opentelemetry_ids).
otel = ["otel-0-32"]
otel-0-28 = ["dep:tracing-opentelemetry-0-28", "dep:opentelemetry-0-27"]
otel-0-29 = ["dep:tracing-opentelemetry-0-29", "dep:opentelemetry-0-28"]
otel-0-30 = ["dep:tracing-opentelemetry-0-30", "dep:opentelemetry-0-29"]
otel-0-31 = ["dep:tracing-opentelemetry-0-31", "dep:opentelemetry-0-30"]
otel-0-32 = ["dep:tracing-opentelemetry-0-32"]

[dev-dependencies]
# For otel integration test (0.32): need a tracer to drive tracing-opentelemetry layer.
# 0.28 and 0.31 use opentelemetry-0-27 and opentelemetry-0-30 from optional deps.
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
